syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.arch.grpc";
option java_outer_classname = "PersonStubs";

package com.arch.grpc;

service PersonService {
  rpc calculateAge(PersonDetailsRequest) returns (PersonDetailsResponse);
}

message PersonDetailsResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string state = 5;
  string trackId = 6;
}

message PersonDetailsRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}